--- a/StickyNotes/index.html
+++ b/StickyNotes/index.html
@@ -12,13 +12,13 @@
         <div class="notes">
             <div id="create">
                 <i class="fa-solid fa-plus"></i>
-                <div class="createBox">
-                    <div class="innerCreateBox">
-                        <textarea placeholder="Write Here. . ." id="input" maxlength="160"></textarea>
+                <div class="create__box">
+                    <div class="create__textarea">
+                        <textarea placeholder="Type your thoughts..." id="input" maxlength="160"></textarea>
                     </div>
                 </div>
             </div>
-            <div class="note"></div>
+            <div class="note">This note is a presentation note you can delete it if you need to. Just hover over it.</div>
         </div>
     </div>
 
