feat: added alternative modal window close variants + new font for notes

--- a/StickyNotes/index.html
+++ b/StickyNotes/index.html
@@ -27,7 +27,7 @@
         </div>
     </div>
 
-   
+
     <div id="modal" class="modal">
         <div class="modal__content">
             <span id="closeModalBtn" class="modal__close">&times;</span>
@@ -39,14 +39,15 @@
                 <br>
                 2) If you want to discard creating note press <span>ESC</span>.
                 <br>
-                3) To delete note you need to <span>double click</span> on it, also you can see alternative message about delete when hovering on note.
+                3) To delete note you need to <span>double click</span> on it, also you can see alternative message
+                about delete when hovering on note.
 
             </p>
 
             <div class="modal__ending">happy using =)</div>
         </div>
     </div>
-    
+
     <script src="./script/NotesModule.js"></script>
     <script src="./script/ModalModule.js"></script>
 </body>
