feat: added settings button and modal transitions

--- a/StickyNotes/index.html
+++ b/StickyNotes/index.html
@@ -68,6 +68,10 @@
         </div>
     </div>
 
+    <div class="settings">
+        <i class="fa-solid fa-gear"></i>
+    </div>
+
     <script src="./script/NotesModule.js"></script>
     <script src="./script/ModalModule.js"></script>
 </body>
